--- a/play/player/templates/index.html
+++ b/play/player/templates/index.html
@@ -11,11 +11,14 @@
 
 
 <p><a href="/add_page/">添加文章</a></p>
-
+<div class="progress">
+    <div class="progress-bar progress-bar-success progress-bar-striped" style="width:25%"></div>
+    <div class="progress-bar progress-bar-info progress-bar-striped" style="width:25%"></div>
+    <div class="progress-bar progress-bar-striped progress-bar-warning" style="width:30%"></div>
+    <div class="progress-bar progress-bar-danger progress-bar-striped" style="width:20%"></div>
+</div>
 {% for response in all_response %}
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-   切割线
-  </div>
+
 <h5>ID:{{ response.id }}<br />
 <h3 class="text-left text-warning">标题:{{ response.title }}
 <a>修改</a>
@@ -23,9 +26,14 @@
 </h3>
 <p class="text-center text-danger">内容:{{ response.content }}</p>
 <h4 class="pull-right" >作者:{{ response.author }}</h4>
-<br />
+<br /><br />
+<div class="progress">
+    <div class="progress-bar progress-bar-success progress-bar-striped" style="width:25%"></div>
+    <div class="progress-bar progress-bar-info progress-bar-striped" style="width:25%"></div>
+    <div class="progress-bar progress-bar-striped progress-bar-warning" style="width:30%"></div>
+    <div class="progress-bar progress-bar-danger progress-bar-striped" style="width:20%"></div>
+</div>
     {% endfor %}
-<hr />
 
 
 {#<table>#}
