--- a/play/player/templates/add.html
+++ b/play/player/templates/add.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-{% load static %}
-<link href="{% static "bootstrap3/css/bootstrap.min.css" %}" rel="stylesheet" type="text/css"/>
-<link href="{% static "bootstrap3/css/bootstrap-theme.min.css" %}" rel="stylesheet" type="text/css"/>
-<script src="{% static "bootstrap3/js/jquery-3.2.1.min.js" %}"></script>
-<script src="{% static "bootstrap3/js/bootstrap.min.js" %}"></script>
+{% include 'bas.html' %}
  <title>添加文章</title>
 <body>
 
-<form action="" method="post" >
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="提交">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <form action="" method="post" >
+                 {% csrf_token %}
+                    {{ form }}
+            <input type="submit" class="btn btn-primary btn-md" value="提交">
+            </form>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
