detail and delete
detail and delete

--- a/play/player/templates/index.html
+++ b/play/player/templates/index.html
@@ -15,9 +15,9 @@
 
 <h5>ID:{{ response.id }}</h5><br />
  <p>Email:{{ response.email }}</p><br />
-<h3 class="text-left text-warning">标题:{{ response.title }}
+<h3 class="text-left text-warning">标题:<a href="/detail-{{ response.id }}.html">{{ response.title }}
 <a>修改</a>
-<a>删除</a>
+<a href="delete-{{ response.id }}">删除</a>
 </h3>
 <p class="text-center text-danger">内容:{{ response.content }}</p>
 <h4 class="pull-right" >作者:{{ response.author }}</h4>
