--- a/play/player/templates/bas.html
+++ b/play/player/templates/bas.html
@@ -5,3 +5,5 @@
 <link href="{% static "bootstrap3/css/bootstrap-theme.min.css" %}" rel="stylesheet" type="text/css"/>
 <script src="{% static "bootstrap3/js/jquery-3.2.1.min.js" %}"></script>
 <script src="{% static "bootstrap3/js/bootstrap.min.js" %}"></script>
+                {% block content %}
+                {% endblock %}
